erDiagram
    tenants ||--o{ carriers : owns
    carriers ||--o{ carrier_users : has
    carriers ||--o| carrier_onboardings : has
    carrier_onboardings ||--o{ carrier_onboarding_events : logs
    carriers ||--o{ fmcsa_verifications : "verified by"
    carriers ||--o{ carrier_dispatcher_assignments : "assigned to"
    tenants ||--o{ dispatcher_profiles : has
    tenants ||--o{ dispatcher_groups : defines
    dispatcher_groups ||--o{ group_members : contains
    dispatcher_profiles ||--o{ dispatcher_resource_assignments : grants
    carriers ||--o{ factoring_assignments : "may use"
    factoring_companies ||--o{ factoring_assignments : services

    carriers {
        uuid id PK
        uuid tenant_id FK
        varchar dot_number "UK per (tenant_id, dot_number)"
        enum onboarding_status
        enum fmcsa_status
        integer dispatch_fee_bps
        text ein_encrypted
    }
    carrier_onboardings {
        uuid id PK
        uuid carrier_id FK "UK, 1:1"
        enum status
        jsonb checklist
    }
    fmcsa_verifications {
        uuid id PK
        uuid carrier_id FK
        varchar provider
        enum status
        jsonb normalized
        jsonb mismatches
    }
    dispatcher_profiles {
        uuid id PK
        uuid user_id FK
        integer commission_bps
    }
    carrier_dispatcher_assignments {
        uuid id PK
        uuid carrier_id FK
        uuid dispatcher_user_id FK
        boolean is_primary
        timestamp end_date "null = active"
    }
    dispatcher_resource_assignments {
        uuid id PK
        uuid dispatcher_user_id FK
        varchar resource_type "truck|trailer|driver|group"
        uuid resource_id
    }
    factoring_companies {
        uuid id PK
        varchar name
    }
    factoring_assignments {
        uuid id PK
        uuid carrier_id FK
        uuid factoring_company_id FK
        enum verification_status "manual workflow"
    }
